; ModuleID = '/home/carl/AnghaBench/RetroArch/menu/drivers/ozone/extr_ozone_sidebar.c_ozone_go_to_sidebar.c'
source_filename = "/home/carl/AnghaBench/RetroArch/menu/drivers/ozone/extr_ozone_sidebar.c_ozone_go_to_sidebar.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, i32, %struct.TYPE_5__, i32, i32 }
%struct.TYPE_5__ = type { float }
%struct.menu_animation_ctx_entry = type { float*, i64, float, i32*, i32, i32, i32* }

@ANIMATION_CURSOR_DURATION = common dso_local global i32 0, align 4
@EASING_OUT_QUAD = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ozone_go_to_sidebar(%struct.TYPE_6__* %0, i64 %1) #0 {
  %3 = alloca %struct.TYPE_6__*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.menu_animation_ctx_entry, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %7 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %6, i32 0, i32 3
  %8 = load i32, i32* %7, align 4
  %9 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %10 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %9, i32 0, i32 4
  store i32 %8, i32* %10, align 4
  %11 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %12 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %15 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %14, i32 0, i32 0
  store i32 %13, i32* %15, align 4
  %16 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %17 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %16, i32 0, i32 1
  store i32 1, i32* %17, align 4
  %18 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %19 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %18, i32 0, i32 2
  %20 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %19, i32 0, i32 0
  store float 0.000000e+00, float* %20, align 4
  %21 = getelementptr inbounds %struct.menu_animation_ctx_entry, %struct.menu_animation_ctx_entry* %5, i32 0, i32 6
  store i32* null, i32** %21, align 8
  %22 = load i32, i32* @ANIMATION_CURSOR_DURATION, align 4
  %23 = getelementptr inbounds %struct.menu_animation_ctx_entry, %struct.menu_animation_ctx_entry* %5, i32 0, i32 5
  store i32 %22, i32* %23, align 4
  %24 = load i32, i32* @EASING_OUT_QUAD, align 4
  %25 = getelementptr inbounds %struct.menu_animation_ctx_entry, %struct.menu_animation_ctx_entry* %5, i32 0, i32 4
  store i32 %24, i32* %25, align 8
  %26 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %27 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %26, i32 0, i32 2
  %28 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %27, i32 0, i32 0
  %29 = getelementptr inbounds %struct.menu_animation_ctx_entry, %struct.menu_animation_ctx_entry* %5, i32 0, i32 0
  store float* %28, float** %29, align 8
  %30 = load i64, i64* %4, align 8
  %31 = getelementptr inbounds %struct.menu_animation_ctx_entry, %struct.menu_animation_ctx_entry* %5, i32 0, i32 1
  store i64 %30, i64* %31, align 8
  %32 = getelementptr inbounds %struct.menu_animation_ctx_entry, %struct.menu_animation_ctx_entry* %5, i32 0, i32 2
  store float 1.000000e+00, float* %32, align 8
  %33 = getelementptr inbounds %struct.menu_animation_ctx_entry, %struct.menu_animation_ctx_entry* %5, i32 0, i32 3
  store i32* null, i32** %33, align 8
  %34 = call i32 @menu_animation_push(%struct.menu_animation_ctx_entry* %5)
  %35 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %36 = call i32 @ozone_sidebar_update_collapse(%struct.TYPE_6__* %35, i32 1)
  ret void
}

declare dso_local i32 @menu_animation_push(%struct.menu_animation_ctx_entry*) #1

declare dso_local i32 @ozone_sidebar_update_collapse(%struct.TYPE_6__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
